fix the description box overflow and owner selcect box overlapping on select input

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataContract/ContractDetailFormTab/contract-detail-form-tab.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataContract/ContractDetailFormTab/contract-detail-form-tab.less
@@ -11,7 +11,9 @@
  *  limitations under the License.
  */
 .contract-detail-form {
-  .block-editor-wrapper {
-    height: 160px;
+  .block-editor-wrapper.block-editor-wrapper--bar-menu {
+    .om-block-editor {
+      height: 160px;
+    }
   }
 }
